question bank counter for exercise settings page & question bank refactoring (#326)
* exercise settings page improvements (question bank counter, new buttons for stage deletion)
* improve bank search queries (add complexity and tags accounting, queries unification)
* add dynamic bank complexity statistics recalculation
* question bank refactoring (special type for bank search requests, remove dead code, improve logic)
* new ui for expression domain questions